@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Fixed the thread locking in Log::Dispatch::Syslog (I hope). The previous
+  version caused Perl to crash when per-thread locking was enabled. Note that
+  I don't use threads so I haven't tested this. Patch by Sergio Fernández
+  Muñoz. RT # 99208.
+
+
 2.42     2014-08-12
 
 - Added a Log::Dispatch->clone() method. This returns shallow clone. The
